Bug 69555 - Tear Free broken/disabled by commit - intel: Compile fixes for base install of SLED11.sp3
Summary: Tear Free broken/disabled by commit - intel: Compile fixes for base install o...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-19 06:03 UTC by FBrown
Modified: 2013-09-19 10:41 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.log with failing tear free (19.24 KB, text/plain)
2013-09-19 06:03 UTC, FBrown
no flags Details
Xorg.log with successful tear free on previous commit (19.24 KB, text/plain)
2013-09-19 06:04 UTC, FBrown
no flags Details

Description FBrown 2013-09-19 06:03:03 UTC
Created attachment 86120 [details]
Xorg.log with failing tear free

Commit: dcf9b5ae1889926007cf8a0efd127e9df3c909de

http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/commit/?id=dcf9b5ae1889926007cf8a0efd127e9df3c909de

intel: Compile fixes for base install of SLED11.sp3
Highlights of that distribution include xorg-xserver-1.6.5, kernel 3.0.76 and gcc-4.3.

This commit results in the tear free option on SNB being disabled, despite being explicitly set in xorg.conf. Tearing then occurs on some video where it did not with tear free enabled.

Driver built from previous commit: 97b443f589fb62ba060f09a371be273549f524d0 activates tear free as expected and no tearing occurs.

xorg logs attached for both commits
Comment 1 FBrown 2013-09-19 06:04:04 UTC
Created attachment 86121 [details]
Xorg.log with successful tear free on previous commit
Comment 2 Chris Wilson 2013-09-19 10:31:55 UTC
commit 6316905983fe1fb4828ff1039923327f467306fa
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Sep 19 11:28:30 2013 +0100

    intel: Fix includes for intel_options
    
    In commit dcf9b5ae1889926007cf8a0efd127e9df3c909de
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Tue Sep 17 22:27:45 2013 +0100
    
        intel: Compile fixes for base install of SLED11.sp3
    
    the includes were juggled around to avoid pulling in xorg-server.h
    outside of the driver. However, missing xorg-server.h leads to subtle
    bugs in the layout of structures, in this case breaking xf86Options.
    
    Reported-by: FBrown <francisbrwn9@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=69555
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 FBrown 2013-09-19 10:41:58 UTC
Confirmed fixed here as well. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.